6402006: FileInputStream.available() returns negative values when reading a large file

Reviewed-by: alanb